# automate-internal-linking

./: .env.example  .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  serve.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/input/: ConfigPanel.tsx  FileUpload.tsx  UrlInputPanel.tsx  UrlTextarea.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  TabNav.tsx
frontend/src/components/progress/: ErrorList.tsx  ProgressBar.tsx  ProgressView.tsx
frontend/src/components/ui/: Badge.tsx  (+4 more)
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useJobPoller.ts
frontend/src/lib/: csvExport.ts
frontend/src/types/: api.ts
node-api/: package-lock.json  package.json
node-api/src/: index.ts  types.ts
node-api/src/routes/: analyze.ts  health.ts  results.ts
node-api/src/services/: pipeline.ts
python/: pyproject.toml  requirements-dev.txt  requirements.txt
python/src/internal_linker/: __init__.py  __main__.py  cli.py  config.py  types.py
python/src/internal_linker/api/: __init__.py  server.py
python/src/internal_linker/nlp/: __init__.py  embeddings.py  entities.py  intent.py  keyphrase.py  noun_phrases.py
python/src/internal_linker/pipeline/: __init__.py  anchor_discovery.py  candidate_graph.py  fetcher.py  filters.py  orchestrator.py  pointer.py  profiler.py  selector.py
python/src/internal_linker/scoring/: __init__.py  combined.py  context.py  lexical.py  quality.py  semantic.py
tests/fixtures/sample_pages/: page1.html  page2.html  page3.html
