[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "internal-linker"
version = "0.1.0"
description = "Automated internal linking tool for SEO optimization"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
internal-linker = "internal_linker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/python"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
